--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,24 @@
 server.port=8090
 
+#============================================
 # Database
-spring.datasource.driver.class.name=Oracle.jdbc.OracleDriver
+#============================================
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=PLATZI
 spring.datasource.password=01020304
+spring.datasource.driver.class.name=Oracle.jdbc.OracleDriver
+
+#============================================
+#   JPA Settings
+#============================================
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+# Muestr los SQL por consola
+spring.jpa.show-sql=true
+# Muestra los SQL en un formato entendible
+spring.jpa.properties.hibernate.format_sql=true
+# Muestras las estadisticas de ejecución de los SQL
+#spring.jpa.properties.hibernate.generate_statistics = true
+
+logging.level.org.springframework.web=ERROR
+logging.level.com.howtodoinjava=DEBUG
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
